LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.460 $>


[Note: This file does not mention every change made to the NetBSD source tree.
For an exhaustive list, please subscribe to the `source-changes' mailing list,
or see the mailing list archives.  For more information, send a message
containing just the word `help' to `majordomo@NetBSD.org'.]


Changes from NetBSD 3.0 to NetBSD 4.0:
	agr(4): Add pseudo-device driver for link aggregation. [yamt 20050318]
	kernel: Limit the number of locks per user to 1024 [christos 20050320]
	crypto: Upgrade to OpenSSL 0.9.7f [christos 20050325]
	attimer(4): Split the pcppi(4) driver to properly assign resources and
		allow both the devices to attach through ACPI [cube 20050325]
	gre(4): add support for IPv6 as inner protocol, contributed by
		Gert Doering [is 20050330]
	/rescue: Add tetris.  [lukem 20050401]
	uvm(9): Simplify kernel memory allocation API and its implementation.
		[yamt 20050401]
	ipf(8): Updated to version 4.1.8. [martti 20050403]
	identd(8): Add support for forwarding ident queries and receiving of
		proxied ident queries. [peter 20050404]
	ac97: Add support for AC'97 modems. [jmcneill 20050407]
	auich(4): Add support for Intel ICH AC'97 modems as audio devices.
		Currently disabled by default. [jmcneill 20050407]